# kenzie-pet

./: README.md  manage.py  pyproject.toml
KenziePet/: asgi.py  settings.py  urls.py  wsgi.py
animals/: models.py  serializers.py  services.py  urls.py  views.py
animals/migrations/: 0001_initial.py  0002_auto_20210429_2025.py
